cspm/cspm-platform/services/inventory-collector/output/588989875114/ap-southeast-2/ec2_149/describe_security_groups/describe_security_groups_output_20250603_145513.json
{
  "SecurityGroups": [
    {
      "GroupId": "sg-f8f7579d",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-60eb1005",
      "SecurityGroupArn": "arn:aws:ec2:ap-southeast-2:588989875114:security-group/sg-f8f7579d",
      "OwnerId": "588989875114",
      "GroupName": "default",
      "Description": "default VPC security group",
      "IpPermissions": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-f8f7579d"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    }
  ],
  "ResponseMetadata": {
    "RequestId": "fe9ce014-d76e-4d36-b43c-27d6cd544c21",
    "HTTPStatusCode": 200,
    "HTTPHeaders": {
      "x-amzn-requestid": "fe9ce014-d76e-4d36-b43c-27d6cd544c21",
      "cache-control": "no-cache, no-store",
      "strict-transport-security": "max-age=31536000; includeSubDomains",
      "content-type": "text/xml;charset=UTF-8",
      "content-length": "929",
      "date": "Tue, 03 Jun 2025 14:55:26 GMT",
      "server": "AmazonEC2"
    },
    "RetryAttempts": 0
  }
}
